--- a/app/views/administrador.jade
+++ b/app/views/administrador.jade
@@ -31,7 +31,7 @@ html(lang='es')
                 div(class="full-reset nav-lateral-list-menu")
                     ul(class="list-unstyled")
                         li
-                            a(href="/aniadir_partida") 
+                            a(href="/administrador/partida") 
                                 i(class="zmdi zmdi-assignment-o zmdi-hc-fw")
                                 span &nbsp; &nbsp;Añadir Partida
                         li
