--- a/app/views/aniadir_tema.jade
+++ b/app/views/aniadir_tema.jade
@@ -20,36 +20,60 @@ html(lang='es')
         script(src='/js/main.js')
         script(src='/js/modificar_tema.js')
     body
-        div(class="navbar-lateral full-reset")
-            div(class="visible-xs font-movile-menu mobile-menu-button")
-            div(class="full-reset container-menu-movile custom-scroll-containers")
-                div(class="logo full-reset all-tittles") Interroga2
-                    i(class="visible-xs zmdi zmdi-close pull-left mobile-menu-button" style="line-height: 55px; cursor: pointer; padding: 0 10px; margin-left: 7px;")
-                div(class="full-reset" style="background-color:#2B3D51; padding: 10px 0; color:#fff;")
-                    figure
-                        img(src="/assets/img/logo.png" alt="Interroga2" class="img-responsive center-box" style="width:55%;")
-                        p(class="text-center" style="padding-top: 15px;") Interroga2
+        div.navbar-lateral.full-reset
+          div.visible-xs.font-movile-menu.mobile-menu-button
+      
+          div.full-reset.container-menu-movile.custom-scroll-containers
+            div.logo.full-reset.all-tittles Administrador
+              i.visible-xs.zmdi.zmdi-close.pull-left.mobile-menu-button(style='line-height: 55px; cursor: pointer; padding: 0 10px; margin-left: 7px;')
+        
+            div.full-reset(style='background-color:#2B3D51; padding: 10px 0; color:#fff;')
+              figure
+                img.img-responsive.center-box(src='/assets/img/logo.png', alt='Biblioteca', style='width:55%;')
+                p.text-center(style='padding-top: 15px;') Interroga2
+            div.full-reset.nav-lateral-list-menu
+              ul.list-unstyled
+                li
+                  a(href='/administrador/partida')
+                    i.zmdi.zmdi-assignment-o.zmdi-hc-fw
+                    span &nbsp; &nbsp;A&ntilde;adir Partida
+                li
+                  a(href='/administrador/aniadir_tema')
+                    i.zmdi.zmdi-assignment-o.zmdi-hc-fw
+                    span &nbsp; &nbsp;A&ntilde;adir Temas
+                li
+                  a(href='/administrador/aniadir_pregunta')
+                    i.zmdi.zmdi-assignment-o.zmdi-hc-fw
+                    span &nbsp; &nbsp;A&ntilde;adir Preguntas
+        
+        
         div(class="content-page-container full-reset custom-scroll-containers")
             nav(class="navbar-user-top full-reset")
                 ul(class="list-unstyled full-reset")
+                    figure
+                      img.img-responsive.img-circle.center-box(src='/assets/img/user01.png', alt='user-picture')
+                    li(style='color:#fff; cursor:default;')
+                      span.all-tittles Hola #{nombre}
                     li(class="tooltips-general exit-system-button" data-href="/" data-placement="bottom" title="Salir del sistema")
-                        i(class="zmdi zmdi-power")
+                      i(class="zmdi zmdi-power")
+                    li(class="tooltips-general redirec-system-button" data-href="/administrador/modificar" data-placement="bottom" title="Configurar Cuenta")
+                        i(class="zmdi zmdi-wrench zmdi-hc-fw")
                     li(class="tooltips-general btn-help" data-placement="bottom" title="Ayuda")
-                        i(class="zmdi zmdi-help-outline zmdi-hc-fw")
+                      i(class="zmdi zmdi-help-outline zmdi-hc-fw")
                     li(class="mobile-menu-button visible-xs" style="float: left !important;")
-                        i(class="zmdi zmdi-menu")
+                      i(class="zmdi zmdi-menu")
             div(class="container-fluid")
             div(class="container-flat-form")
                 div(class="title-flat-form title-flat-blue") Añadir Tema
-                form(autocomplete="off" action='/administrador/aniadir_tema' method='post')
+                form(autocomplete="off" action='/administrador/aniadir_tema' method='post' id='formValidate3')
                     div(class="row")
                        div(class="col-xs-12 col-sm-8 col-sm-offset-2")
                            div(class="group-material")
-                                input(name='tema' type="text" class="material-control tooltips-general" placeholder="Escribe aquí el tema" required="" pattern="[a-zA-ZáéíóúÁÉÍÓÚñÑ ]{1,50}" maxlength="50" data-toggle="tooltip" data-placement="top" title="nombre_tema")
+                                input(data-error=".errorTxt1" name='tema' type="text" class="material-control" placeholder="Escribe aquí el tema" required="" pattern="[a-zA-ZáéíóúÁÉÍÓÚñÑ ]{1,50}" maxlength="50"  title="")
+                                div(class="errorTxt1")
                                 span(class="highlight")
                                 span(class="bar")
-                                label Nombre tema 
-                          
+                                label Nombre tema                    
                             center
                                 p(class='text-danger bg-danger')= error
                            p(class="text-center")
@@ -79,8 +103,8 @@ html(lang='es')
                             div.div-table-cell(id="idtema" style='width: 6%;')= index
                             div.div-table-cell(id=i.idtema style='width: 22%;' )= i.nombretema
                             div.div-table-cell(style='width: 8%;')
-                                button.btn.btn-danger(id="botonMod" type="submit" value=i.idtema)
-                                    i.zmdi.zmdi-delete
+                                button.btn.btn-info(id="botonMod" type="submit" value=i.idtema)
+                                    i.zmdi.zmdi-file-text
 
             footer(class="footer full-reset")
                 div(class="container-fluid")
@@ -99,3 +123,8 @@ html(lang='es')
                                     i(class="zmdi zmdi-check zmdi-hc-fw")
                                     span &nbsp;Carlos Condori &nbsp; 
                 div(class="footer-copyright full-reset all-tittles") 2016 Interroga2
+            
+            script(src='/js/jquery.validate.min.js')
+            script(src='/js/additional-methods.min.js')
+            script(src='/js/messages_es.js')
+            script(src='/js/formValidate.js')  
