--- a/app/views/crear_partida.jade
+++ b/app/views/crear_partida.jade
@@ -1,94 +1,161 @@
-doctype html
-html(lang='es')
-    head
-        title Interroga2
-        meta(charset='utf-8')
-        meta(name='viewport' content='width=device-width, initial-scale=1')
-        link(rel='Shortcut Icon' type='image/x-icon' href='assets/icons/book.ico')
-        script(src='js/sweet-alert.min.js')
-        link(rel='stylesheet' href='css/sweet-alert.css')
-        link(rel='stylesheet' href='css/material-design-iconic-font.min.css')
-        link(rel='stylesheet' href='css/normalize.css')
-        link(rel='stylesheet' href='css/bootstrap.min.css')
-        link(rel='stylesheet' href='css/jquery.mCustomScrollbar.css')
-        link(rel='stylesheet' href='css/style.css')
-        link(rel='stylesheet' href='css/login.css')
-        script(src='js/jquery-1.11.2.min.js')
-        script(src='js/modernizr.js')
-        script(src='js/bootstrap.min.js')
-        script(src='js/jquery.mCustomScrollbar.concat.min.js')
-        script(src='js/main.js')
-    body
-        div(class="navbar-lateral full-reset")
-            div(class="visible-xs font-movile-menu mobile-menu-button")
-            div(class="full-reset container-menu-movile custom-scroll-containers")
-                div(class="logo full-reset all-tittles") Interroga2
-                    i(class="visible-xs zmdi zmdi-close pull-left mobile-menu-button" style="line-height: 55px; cursor: pointer; padding: 0 10px; margin-left: 7px;")
-                div(class="full-reset" style="background-color:#2B3D51; padding: 10px 0; color:#fff;")
-                    figure
-                        img(src="assets/img/logo.png" alt="Biblioteca" class="img-responsive center-box" style="width:55%;")
-                        p(class="text-center" style="padding-top: 15px;") Interroga2
-        div(class="content-page-container full-reset custom-scroll-containers")
-            nav(class="navbar-user-top full-reset")
-                ul(class="list-unstyled full-reset")
-                    li(class="tooltips-general exit-system-button" data-href="/" data-placement="bottom" title="Salir del sistema")
-                        i(class="zmdi zmdi-power")
-                    li(class="tooltips-general btn-help" data-placement="bottom" title="Ayuda")
-                        i(class="zmdi zmdi-help-outline zmdi-hc-fw")
-                    li(class="mobile-menu-button visible-xs" style="float: left !important;")
-                        i(class="zmdi zmdi-menu")
-            div(class="container-fluid")
-            div(class="container-flat-form")
-                div(class="title-flat-form title-flat-blue") Datos Personales
-                form(autocomplete="off" action='/' method='post')
-                    div(class="row")
-                       div(class="col-xs-12 col-sm-8 col-sm-offset-2")
-                           div(class="group-material")
-                                input(type="text" class="material-control tooltips-general" placeholder="Escribe aquí tu alias" required="" pattern="[a-zA-ZáéíóúÁÉÍÓÚñÑ ]{1,50}" maxlength="50" data-toggle="tooltip" data-placement="top" title="Alias")
-                                span(class="highlight")
-                                span(class="bar")
-                                label Nombre materia
-                            div(class="group-material")
-                                input(type="text" class="material-control tooltips-general" placeholder="Escribe aquí tu apellido paterno" required="" pattern="[a-zA-ZáéíóúÁÉÍÓÚñÑ ]{1,50}" maxlength="50" data-toggle="tooltip" data-placement="top" title="Apellido paterno del estudiante")
-                                span(class="highlight")
-                                span(class="bar")
-                                label Apellido Paterno
-                           div(class="group-material")
-                                input(type="text" class="material-control tooltips-general" placeholder="Escribe aquí tu apellido materno" required="" pattern="[a-zA-ZáéíóúÁÉÍÓÚñÑ ]{1,50}" maxlength="50" data-toggle="tooltip" data-placement="top" title="Apellido materno del estudiante")
-                                span(class="highlight")
-                                span(class="bar")
-                                label Apellido Materno
-                           div(class="group-material")
-                                input(type="text" class="material-control tooltips-general" placeholder="Escribe aquí tu correo  electrónico" required="" pattern="[a-zA-ZáéíóúÁÉÍÓÚñÑ ]{1,50}" maxlength="50" data-toggle="tooltip" data-placement="top" title="Correo electrónico")
-                                span(class="highlight")
-                                span(class="bar")
-                                label Email
-                           div(class="group-material")
-                                input(type="text" class="material-control tooltips-general" placeholder="Teléfono" pattern="[0-9]{8,8}" required="" maxlength="8" data-toggle="tooltip" data-placement="top" title="Solamente 8 números")
-                                span(class="highlight")
-                                span(class="bar")
-                                label Teléfono
-                           p(class="text-center")
-                                button(type="reset" class="btn btn-info" style="margin-right: 20px;")
-                                    i(class="zmdi zmdi-roller")
-                                    &nbsp;&nbsp; Limpiar
-                                button(type="submit" class="btn btn-primary")
-                                    i(class="zmdi zmdi-floppy")
-                                    &nbsp;&nbsp; Guardar 
-            footer(class="footer full-reset")
-                div(class="container-fluid")
-                    div(class="row")
-                        div(class="col-xs-12 col-sm-6")
-                            h4(class="all-tittles") Acerca de
-                            p Interroga2, juego de preguntas.                        
-                        div(class="col-xs-12 col-sm-6")
-                            h4(class="all-tittles") Desarrolladores
-                            ul(class="list-unstyled")
-                                li
-                                    i(class="zmdi zmdi-check zmdi-hc-fw")
-                                    &nbsp;Elvis Basilio &nbsp; 
-                                    i(class="zmdi zmdi-check zmdi-hc-fw")
-                                    &nbsp;Carlos Llanos &nbsp; 
-                                    i(class="zmdi zmdi-check zmdi-hc-fw")
-                                    &nbsp;Carlos Condori &nbsp; 
-                div(class="footer-copyright full-reset all-tittles") 2016 Interroga2
+doctype html(lang='es')
+head
+    title Interroga2
+     
+    meta(charset='utf-8')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+     
+    link(rel='Shortcut Icon', type='image/x-icon', href='/assets/icons/book.ico')
+     
+    script(src='/js/sweet-alert.min.js')
+     
+    link(rel='stylesheet', href='/css/sweet-alert.css')
+     
+    link(rel='stylesheet', href='/css/material-design-iconic-font.min.css')
+     
+    link(rel='stylesheet', href='/css/normalize.css')
+     
+    link(rel='stylesheet', href='/css/bootstrap.min.css')
+     
+    link(rel='stylesheet', href='/css/jquery.mCustomScrollbar.css')
+     
+    link(rel='stylesheet', href='/css/style.css')
+     
+    link(rel='stylesheet', href='/css/login.css')
+     
+    script(src='/js/jquery-1.11.2.min.js')
+     
+    script(src='/js/modernizr.js')
+     
+    script(src='/js/bootstrap.min.js')
+     
+    script(src='/js/jquery.mCustomScrollbar.concat.min.js')
+     
+    script(src='/js/main.js')
+  body
+    div.navbar-lateral.full-reset
+      div.visible-xs.font-movile-menu.mobile-menu-button
+       
+      div.full-reset.container-menu-movile.custom-scroll-containers
+        div.logo.full-reset.all-tittles Administrador
+          i.visible-xs.zmdi.zmdi-close.pull-left.mobile-menu-button(style='line-height: 55px; cursor: pointer; padding: 0 10px; margin-left: 7px;')
+         
+        div.full-reset(style='background-color:#2B3D51; padding: 10px 0; color:#fff;')
+          figure
+            img.img-responsive.center-box(src='/assets/img/logo.png', alt='Biblioteca', style='width:55%;')
+             
+            p.text-center(style='padding-top: 15px;') Interroga2
+         
+        div.full-reset.nav-lateral-list-menu
+          ul.list-unstyled
+            li
+              a(href='/administrador/partida')
+                i.zmdi.zmdi-assignment-o.zmdi-hc-fw
+                &nbsp; &nbsp;A&ntilde;adir Partida
+             
+            li
+              a(href='/administrador/aniadir_tema')
+                i.zmdi.zmdi-assignment-o.zmdi-hc-fw
+                &nbsp; &nbsp;A&ntilde;adir Temas
+             
+            li
+              a(href='/administrador/aniadir_pregunta')
+                i.zmdi.zmdi-assignment-o.zmdi-hc-fw
+                &nbsp; &nbsp;A&ntilde;adir Preguntas
+     
+    div.content-page-container.full-reset.custom-scroll-containers
+      nav.navbar-user-top.full-reset
+        ul.list-unstyled.full-reset
+          figure
+            img.img-responsive.img-circle.center-box(src='/assets/img/user01.png', alt='user-picture')           
+          li(style='color:#fff; cursor:default;')
+            span.all-tittles Hola #{nombre}           
+          li(class="tooltips-general exit-system-button" data-href="/" data-placement="bottom" title="Salir del sistema")
+            i.zmdi.zmdi-power           
+          li(class="tooltips-general redirec-system-button" data-href="/administrador/modificar" data-placement="bottom" title="Configurar Cuenta")
+            i.zmdi.zmdi-wrench.zmdi-hc-fw           
+          li.tooltips-general.btn-help(data-placement='bottom', title='Ayuda')
+            i.zmdi.zmdi-help-outline.zmdi-hc-fw           
+          li.mobile-menu-button.visible-xs(style='float: left !important;')
+            i.zmdi.zmdi-menu
+      // inico
+      div.container
+        div.page-header
+          h1.all-tittles Crear Partida
+       
+      div.container-fluid
+        div.container-flat-form
+          div.title-flat-form.title-flat-blue Crear Nueva Partida
+           
+          form(autocomplete='off', id='formValidate4' action='/administrador/partida' method='post')
+            div.row
+              div.col-xs-12.col-sm-8.col-sm-offset-2
+                div.group-material
+                  input.material-control(name='partida', data-error='.errorTxt1' type='text', placeholder='Escribe aquí el nombre de la partida', pattern='[a-zA-ZáéíóúÁÉÍÓÚñÑ ]{1,50}', required='', maxlength='50', data-toggle='tooltip', title='')
+                  div(class="errorTxt1")
+                  span.highlight 
+                  span.bar                   
+                  label Titulo de la partida
+                center
+                      p(class='text-danger bg-danger')= error         
+                div.group-material
+                  span Cantidad de participantes
+                   
+                  select.material-control(data-error='.errorTxt2', title='', required, name='cant')
+                    option(value='', disabled='', selected='') Selecciona una opci&oacute;n                     
+                    option(value='5') 5                     
+                    option(value='10') 10                     
+                    option(value='15') 15                     
+                    option(value='20') 20
+                  div(class="errorTxt2")
+                 
+                p.text-center
+                  button.btn.btn-primary(type='submit')
+                    i.zmdi.zmdi-floppy
+                       &nbsp;&nbsp; Crear
+      // fin
+      div.container-fluid
+        // table
+        h2.text-center.all-tittles Listado de Partidas Creadas         
+        div.table-responsive
+          .div-table(style='margin:0 !important;')
+            .div-table-row.div-table-row-list(style='background-color:#DFF0D8; font-weight:bold;')
+              .div-table-cell(style='width: 6%;') #               
+              .div-table-cell(style='width: 22%;') Partida
+              .div-table-cell(style='width: 22%;') Fecha               
+      each i in partidas
+        div.table-responsive
+          .div-table(style='margin:0 !important;')
+            .div-table-row.div-table-row-list
+              .div-table-cell(style='width: 6%;')= i.idpartida            
+              .div-table-cell(style='width: 22%;')= i.titulo
+              .div-table-cell(style='width: 22%;')= i.fecha.getDate()+"/"+(i.fecha.getMonth()+1)+"/"+i.fecha.getFullYear()          
+
+      footer.footer.full-reset
+        div.container-fluid
+          div.row
+            div.col-xs-12.col-sm-6
+              h4.all-tittles Acerca de
+               
+              p Interroga2, juego de preguntas.
+             
+            div.col-xs-12.col-sm-6
+              h4.all-tittles Desarrolladores
+               
+              ul.list-unstyled
+                li
+                  i.zmdi.zmdi-check.zmdi-hc-fw
+                  &nbsp;Elvis Basilio &nbsp;
+                   
+                  i.zmdi.zmdi-check.zmdi-hc-fw
+                  &nbsp;Carlos Llanos &nbsp;
+                   
+                  i.zmdi.zmdi-check.zmdi-hc-fw
+                  &nbsp;Carlos Condori
+         
+        div.footer-copyright.full-reset.all-tittles 2016 Interroga2
+      
+      script(src='/js/jquery.validate.min.js')
+      script(src='/js/additional-methods.min.js')
+      script(src='/js/messages_es.js')
+      script(src='/js/formValidate.js')
