--- a/app/views/modificar_pregunta.jade
+++ b/app/views/modificar_pregunta.jade
@@ -20,11 +20,11 @@ head
   body
     div.navbar-lateral.full-reset
       div.visible-xs.font-movile-menu.mobile-menu-button
-  
+
       div.full-reset.container-menu-movile.custom-scroll-containers
         div.logo.full-reset.all-tittles Administrador
           i.visible-xs.zmdi.zmdi-close.pull-left.mobile-menu-button(style='line-height: 55px; cursor: pointer; padding: 0 10px; margin-left: 7px;')
-    
+
         div.full-reset(style='background-color:#2B3D51; padding: 10px 0; color:#fff;')
           figure
             img.img-responsive.center-box(src='/assets/img/logo.png', alt='Biblioteca', style='width:55%;')
@@ -50,10 +50,10 @@ head
           figure
             img.img-responsive.img-circle.center-box(src='/assets/img/user01.png', alt='user-picture')
           li(style='color:#fff; cursor:default;')
-            span.all-tittles Admin #{nombre}
-          li(class="tooltips-general exit-system-button" data-href="/" data-placement="bottom" title="Salir del sistema")
+            span.all-tittles Admin Name
+          li.tooltips-general.exit-system-button(data-href='index.html', data-placement='bottom', title='Salir del sistema')
             i.zmdi.zmdi-power
-          li(class="tooltips-general redirec-system-button" data-href="/administrador/modificar" data-placement="bottom" title="Configurar Cuenta")
+          li.tooltips-general.search-book-button(data-href='searchbook.html', data-placement='bottom', title='Configurar Cuenta')
             i.zmdi.zmdi-wrench.zmdi-hc-fw
           li.tooltips-general.btn-help(data-placement='bottom', title='Ayuda')
             i.zmdi.zmdi-help-outline.zmdi-hc-fw
@@ -62,7 +62,7 @@ head
       // inico
       div.container
         div.page-header
-          h1.all-tittles A&ntilde;adir Preguntas
+          h1.all-tittles Modificar Pregunta
       div.container-fluid
         div.container-flat-form
           div.title-flat-form.title-flat-blue A&ntilde;adir Nueva Preguntas
@@ -70,98 +70,73 @@ head
             div.row
               div.col-xs-12.col-sm-8.col-sm-offset-2
                 div.group-material
-                  input.material-control(data-error=".errorTxt1", name="pregunta" type='text', placeholder='Escribe aquí la pregunta', pattern='[a-zA-ZáéíóúÁÉÍÓÚñÑ 0-9 ?]{1,50}', required='', maxlength='50', title='')
-                  div(class="errorTxt1") 
+                  input.material-control(data-error=".errorTxt1", name="pregunta" type='text', placeholder='Escribe aquí la pregunta', pattern='[a-zA-ZáéíóúÁÉÍÓÚñÑ ]{1,50}[?]{1}', required='', maxlength='50', title='')
+                  div(class="errorTxt1")
                   span.highlight
                   span.bar
                   label Pregunta
-                center
-                  p(class='text-danger bg-danger')= error
                 div.group-material
                   span Tema de la pregunta
                   select.material-control(data-error=".errorTxt2", name="tema" , title='')
                     option(value='', disabled='', selected='') Selecciona una opci&oacute;n
                     each i in temas
                       option(value=i.idtema)= i.nombretema
-                  div(class="errorTxt2")    
-                
+                  div(class="errorTxt2")
+
                 label Respuestas
                 br
                 br
                 div.group-material
-                  input.material-control(data-error=".errorTxt3", name="resp1" type='text', placeholder='Escribe aquí la respuesta correcta', pattern='[a-zA-ZáéíóúÁÉÍÓÚñÑ 0-9]{1,50}', required='', maxlength='50', title='')              
-                  div(class="errorTxt3") 
-                  span.highlight                   
-                  span.bar                                  
+                  input.material-control(data-error=".errorTxt3", name="resp1" type='text', placeholder='Escribe aquí la respuesta correcta', pattern='[a-zA-ZáéíóúÁÉÍÓÚñÑ ]{1,50}', required='', maxlength='50', title='')
+                  div(class="errorTxt3")
+                  span.highlight
+                  span.bar
                 div.group-material
-                  input.material-control(data-error=".errorTxt4", name="resp2" type='text', placeholder='Escribe aquí la respuesta incorrecta', pattern='[a-zA-ZáéíóúÁÉÍÓÚñÑ 0-9]{1,50}', required='', maxlength='50', title='')                   
-                  div(class="errorTxt4") 
-                  span.highlight                   
-                  span.bar                   
+                  input.material-control(data-error=".errorTxt4", name="resp2" type='text', placeholder='Escribe aquí la respuesta incorrecta', pattern='[a-zA-ZáéíóúÁÉÍÓÚñÑ ]{1,50}', required='', maxlength='50', title='')
+                  div(class="errorTxt4")
+                  span.highlight
+                  span.bar
                 div.group-material
-                  input.material-control(data-error=".errorTxt5", name="resp3" type='text', placeholder='Escribe aquí la respuesta incorrecta', pattern='[a-zA-ZáéíóúÁÉÍÓÚñÑ 0-9]{1,50}', required='', maxlength='50', title='')                   
-                  div(class="errorTxt5") 
-                  span.highlight                   
-                  span.bar                                   
+                  input.material-control(data-error=".errorTxt5", name="resp3" type='text', placeholder='Escribe aquí la respuesta incorrecta', pattern='[a-zA-ZáéíóúÁÉÍÓÚñÑ ]{1,50}', required='', maxlength='50', title='')
+                  div(class="errorTxt5")
+                  span.highlight
+                  span.bar
                 div.group-material
-                  input.material-control(data-error=".errorTxt6", name="resp4" type='text', placeholder='Escribe aquí la respuesta incorrecta', pattern='[a-zA-ZáéíóúÁÉÍÓÚñÑ 0-9]{1,50}', required='', maxlength='50', title='')                   
-                  div(class="errorTxt6") 
-                  span.highlight                   
+                  input.material-control(data-error=".errorTxt6", name="resp4" type='text', placeholder='Escribe aquí la respuesta incorrecta', pattern='[a-zA-ZáéíóúÁÉÍÓÚñÑ ]{1,50}', required='', maxlength='50', title='')
+                  div(class="errorTxt6")
+                  span.highlight
                   span.bar
                 p.text-center
                   button.btn.btn-primary(type='submit')
                     i.zmdi.zmdi-floppy
-                    span &nbsp;&nbsp; A&ntilde;adir
-                 
-                br                 
-                br
-
-      div.container-fluid
-        // table
-        h2.text-center.all-tittles Listado de Preguntas         
-        div.table-responsive
-          .div-table(style='margin:0 !important;')
-            .div-table-row.div-table-row-list(style='background-color:#DFF0D8; font-weight:bold;')
-              .div-table-cell(style='width: 6%;') #               
-              .div-table-cell(style='width: 22%;') Pregunta               
-              .div-table-cell(style='width: 8%;') Modificar pregunta
-      each i in preguntas 
-        div.table-responsive
-          .div-table(style='margin:0 !important;')
-            .div-table-row.div-table-row-list
-              .div-table-cell(style='width: 6%;')= i.idpreg              
-              .div-table-cell(style='width: 22%;')= i.pregunta               
-              .div-table-cell(style='width: 8%;')
-                button.btn.btn-info
-                  i.zmdi.zmdi-file-text
-        // table
+                    span &nbsp;&nbsp; Modificar
+                    
       // fin
       footer.footer.full-reset
         div.container-fluid
           div.row
             div.col-xs-12.col-sm-6
               h4.all-tittles Acerca de
-               
+
               p Interroga2, juego de preguntas.
-             
+
             div.col-xs-12.col-sm-6
               h4.all-tittles Desarrolladores
-               
+
               ul.list-unstyled
                 li
                   i.zmdi.zmdi-check.zmdi-hc-fw
-                  span &nbsp;Elvis Basilio &nbsp;
-                   
+                    span &nbsp;Elvis Basilio &nbsp;
+
                   i.zmdi.zmdi-check.zmdi-hc-fw
-                  span &nbsp;Carlos Llanos &nbsp;
-                   
+                    span &nbsp;Carlos Llanos &nbsp;
+
                   i.zmdi.zmdi-check.zmdi-hc-fw
-                  span &nbsp;Carlos Condori
-         
+                    span &nbsp;Carlos Condori
+
         div.footer-copyright.full-reset.all-tittles
             2016 Interroga2
       script(src='/js/jquery.validate.min.js')
       script(src='/js/additional-methods.min.js')
       script(src='/js/messages_es.js')
-      script(src='/js/formValidate.js')      
-            
+      script(src='/js/formValidate.js')
