--- a/app/views/usuario.jade
+++ b/app/views/usuario.jade
@@ -37,7 +37,7 @@ html(lang='es')
                         span(class="all-tittles") Hola #{nombre}
                     li(class="tooltips-general exit-system-button" data-href="/" data-placement="bottom" title="Salir del sistema")
                         i(class="zmdi zmdi-power")
-                    li(class="tooltips-general redirec-system-button" data-href="/usuario/crear_cuenta" data-placement="bottom" title="Configurar Cuenta")
+                    li(class="tooltips-general redirec-system-button" data-href="/usuario/modificar" data-placement="bottom" title="Configurar Cuenta")
                         i(class="zmdi zmdi-wrench zmdi-hc-fw")
                     li(class="tooltips-general btn-help" data-placement="bottom" title="Ayuda")
                         i(class="zmdi zmdi-help-outline zmdi-hc-fw")
