--- a/app/views/administrador.jade
+++ b/app/views/administrador.jade
@@ -4,20 +4,20 @@ html(lang='es')
         title Interroga2
         meta(charset='utf-8')
         meta(name='viewport' content='width=device-width, initial-scale=1')
-        link(rel='Shortcut Icon' type='image/x-icon' href='assets/icons/book.ico')
-        script(src='js/sweet-alert.min.js')
-        link(rel='stylesheet' href='css/sweet-alert.css')
-        link(rel='stylesheet' href='css/material-design-iconic-font.min.css')
-        link(rel='stylesheet' href='css/normalize.css')
-        link(rel='stylesheet' href='css/bootstrap.min.css')
-        link(rel='stylesheet' href='css/jquery.mCustomScrollbar.css')
-        link(rel='stylesheet' href='css/style.css')
-        link(rel='stylesheet' href='css/login.css')
-        script(src='js/jquery-1.11.2.min.js')
-        script(src='js/modernizr.js')
-        script(src='js/bootstrap.min.js')
-        script(src='js/jquery.mCustomScrollbar.concat.min.js')
-        script(src='js/main.js')
+        link(rel='Shortcut Icon' type='image/x-icon' href='/assets/icons/book.ico')
+        script(src='/js/sweet-alert.min.js')
+        link(rel='stylesheet' href='/css/sweet-alert.css')
+        link(rel='stylesheet' href='/css/material-design-iconic-font.min.css')
+        link(rel='stylesheet' href='/css/normalize.css')
+        link(rel='stylesheet' href='/css/bootstrap.min.css')
+        link(rel='stylesheet' href='/css/jquery.mCustomScrollbar.css')
+        link(rel='stylesheet' href='/css/style.css')
+        link(rel='stylesheet' href='/css/login.css')
+        script(src='/js/jquery-1.11.2.min.js')
+        script(src='/js/modernizr.js')
+        script(src='/js/bootstrap.min.js')
+        script(src='/js/jquery.mCustomScrollbar.concat.min.js')
+        script(src='/js/main.js')
     body
         div(class="navbar-lateral full-reset")
             div(class="visible-xs font-movile-menu mobile-menu-button")
@@ -26,32 +26,32 @@ html(lang='es')
                     i(class="visible-xs zmdi zmdi-close pull-left mobile-menu-button" style="line-height: 55px; cursor: pointer; padding: 0 10px; margin-left: 7px;")
                 div(class="full-reset" style="background-color:#2B3D51; padding: 10px 0; color:#fff;")
                     figure
-                        img(src="assets/img/logo.png" alt="Biblioteca" class="img-responsive center-box" style="width:55%;")
+                        img(src="/assets/img/logo.png" alt="Biblioteca" class="img-responsive center-box" style="width:55%;")
                         p(class="text-center" style="padding-top: 15px;") Interroga2
                 div(class="full-reset nav-lateral-list-menu")
                     ul(class="list-unstyled")
                         li
-                            a(href="aniadir_partida.html") 
+                            a(href="/aniadir_partida") 
                                 i(class="zmdi zmdi-assignment-o zmdi-hc-fw")
-                                &nbsp; &nbsp;Añadir Partida
+                                span &nbsp; &nbsp;Añadir Partida
                         li
-                            a(href="aniadir_temas.html")
+                            a(href="/administrador/aniadir_tema")
                                 i(class="zmdi zmdi-assignment-o zmdi-hc-fw")
-                                &nbsp; &nbsp;Añadir Temas
+                                span &nbsp; &nbsp;Añadir Temas
                         li
-                            a(href="/aniadir_preguntas")
-                              i(class="zmdi zmdi-assignment-o zmdi-hc-fw")
-                              &nbsp; &nbsp;Añadir Preguntas
+                            a(href="/aniadir_pregunta")
+                                i(class="zmdi zmdi-assignment-o zmdi-hc-fw")
+                                span &nbsp; &nbsp;Añadir Preguntas
         div(class="content-page-container full-reset custom-scroll-containers")
             nav(class="navbar-user-top full-reset")
                 ul(class="list-unstyled full-reset")
                     figure
-                        img(src="assets/img/user01.png" alt="user-picture" class="img-responsive img-circle center-box")
+                        img(src="/assets/img/user01.png" alt="user-picture" class="img-responsive img-circle center-box")
                     li(style="color:#fff; cursor:default;")
                         span(class="all-tittles") Hola #{nombre} 
                     li(class="tooltips-general exit-system-button" data-href="/" data-placement="bottom" title="Salir del sistema")
                         i(class="zmdi zmdi-power")
-                    li(class="tooltips-general redirec-system-button" data-href="/administrador/crear_cuenta" data-placement="bottom" title="Configurar Cuenta")
+                    li(class="tooltips-general redirec-system-button" data-href="/administrador/modificar" data-placement="bottom" title="Configurar Cuenta")
                         i(class="zmdi zmdi-wrench zmdi-hc-fw")
                     li(class="tooltips-general btn-help" data-placement="bottom" title="Ayuda")
                         i(class="zmdi zmdi-help-outline zmdi-hc-fw")
@@ -68,9 +68,9 @@ html(lang='es')
                             ul(class="list-unstyled")
                                 li
                                     i(class="zmdi zmdi-check zmdi-hc-fw")
-                                    &nbsp;Elvis Basilio &nbsp; 
+                                    span &nbsp;Elvis Basilio &nbsp; 
                                     i(class="zmdi zmdi-check zmdi-hc-fw")
-                                    &nbsp;Carlos Llanos &nbsp; 
+                                    span &nbsp;Carlos Llanos &nbsp; 
                                     i(class="zmdi zmdi-check zmdi-hc-fw")
-                                    &nbsp;Carlos Condori &nbsp; 
+                                    span &nbsp;Carlos Condori &nbsp; 
                 div(class="footer-copyright full-reset all-tittles") 2016 Interroga2
