--- a/app/views/administrador.jade
+++ b/app/views/administrador.jade
@@ -39,7 +39,7 @@ html(lang='es')
                                 i(class="zmdi zmdi-assignment-o zmdi-hc-fw")
                                 span &nbsp; &nbsp;Añadir Temas
                         li
-                            a(href="/aniadir_pregunta")
+                            a(href="/administrador/aniadir_pregunta")
                                 i(class="zmdi zmdi-assignment-o zmdi-hc-fw")
                                 span &nbsp; &nbsp;Añadir Preguntas
         div(class="content-page-container full-reset custom-scroll-containers")
